@@ -1,6 +1,6 @@
 --- SConstruct
 +++ SConstruct
-@@ -22,14 +22,25 @@
+@@ -22,14 +22,24 @@
  
  
  
@@ -12,13 +12,12 @@
  
  # create build environment
  
++env = Environment()
++env.SConsignFile()
  env = Environment(tools = ['default', 'pouetChess'], toolpath = ['.'])
 -env.AppendUnique(CXXFLAGS = ['-Wall'])
-+env.SConsignFile()
-+
 +env['CC'] = os.environ['CC']
 +env['CXX'] = os.environ['CXX']
-+
 +if os.environ.has_key('CFLAGS'):
 +	env['CCFLAGS'] = SCons.Util.CLVar(os.environ['CFLAGS'])
 +if os.environ.has_key('CXXFLAGS'):
