@@ -1,6 +1,10 @@
 # ChangeLog for games-board/pouetchess
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-board/pouetchess/ChangeLog,v 1.5 2007/03/12 13:51:29 genone Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-board/pouetchess/ChangeLog,v 1.6 2007/04/29 22:17:57 nyhm Exp $
+
+  29 Apr 2007; Tristan Heaven <nyhm@gentoo.org>
+  files/pouetchess-0.2.0-sconstruct-sandbox.patch:
+  Fix scons sandbox violation again, bug #176461
 
   12 Mar 2007; Marius Mauch <genone@gentoo.org> pouetchess-0.2.0.ebuild:
   Replacing einfo with elog
